--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
       <div class="logo">
         <a href="#">
-          <img src="/public/logo--webcentral.svg" alt="">
+          <img src="public/logo--webcentral.svg" alt="">
         </a>
       </div>
       <div class="navbar">
