--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
                   <li class="nav-item">
-                    <img src="/public/icon--phone.svg" alt="">
+                    <img src="public/icon--phone.svg" alt="">
                     <a class="nav-link active" aria-current="page" href="#">1300 638 734</a>
                   </li>
                   <li class="nav-item">
@@ -56,16 +56,16 @@
                   <li class="nav-item">
 
                     <a class="nav-link active" aria-current="page" href="#">Domains <img class="rotate"
-                        src="/public/icon--arrow--dropdown.svg" alt=""></a>
+                        src="public/icon--arrow--dropdown.svg" alt=""></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Hosting
-                      <img class="rotate" src="/public/icon--arrow--dropdown.svg" alt=""></a>
+                      <img class="rotate" src="public/icon--arrow--dropdown.svg" alt=""></a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                       aria-expanded="false"> Websites
-                      <img class="rotate" src="/public/icon--arrow--dropdown.svg" alt=""></a>
+                      <img class="rotate" src="public/icon--arrow--dropdown.svg" alt=""></a>
                     <!-- <ul class="dropdown-menu">
                               <li><a class="dropdown-item" href="#">Action</a></li>
                               <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -74,21 +74,21 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">Email<img class="rotate"
-                        src="/public/icon--arrow--dropdown.svg" alt=""></a>
+                        src="public/icon--arrow--dropdown.svg" alt=""></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">VPS<img class="rotate" src="/public/icon--arrow--dropdown.svg"
+                    <a class="nav-link disabled" href="#">VPS<img class="rotate" src="public/icon--arrow--dropdown.svg"
                         alt=""></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">SSL Certificates<img class="rotate"
-                        src="/public/icon--arrow--dropdown.svg" alt=""></a>
+                        src="public/icon--arrow--dropdown.svg" alt=""></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#"><img src="/public/account.svg" alt=""></a>
+                    <a class="nav-link disabled" href="#"><img src="public/account.svg" alt=""></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#"><img src="/public/cart.svg" alt=""></a>
+                    <a class="nav-link disabled" href="#"><img src="public/cart.svg" alt=""></a>
                   </li>
                 </ul>
               </div>
@@ -102,7 +102,7 @@
       <div class="banner-back">
         <h1>Get started with a<br> great domain name</h1>
         <form class="d-flex" role="search">
-          <img src="/public/icon--search-magnify.svg" alt=""><input class="form-control me-2" type="search"
+          <img src="public/icon--search-magnify.svg" alt=""><input class="form-control me-2" type="search"
             placeholder="findyourdomain.com.au" aria-label="Search">
             <button class="btn-outline-success" type="submit" id="login-btn">Search</button>
         </form>
@@ -121,7 +121,7 @@
     </div>
     <div class="sub-section raw">
       <div class="img col-md-5">
-        <img src="/public/IMG-01.svg" alt="">
+        <img src="public/IMG-01.svg" alt="">
       </div>
       <div class="text col-md-7">
         <h5>Websites</h5>
@@ -144,7 +144,7 @@
         <button class="text-btn">Get Started</button>
       </div>
       <div class="img col-md-5">
-        <img src="/public/IMG-02.svg" alt="">
+        <img src="public/IMG-02.svg" alt="">
       </div>
     </div>
   </div>
@@ -152,7 +152,7 @@
   <div class="container">
     <div class="sub-section raw">
       <div class="img col-md-5">
-        <img src="/public/IMG-03.svg" alt="">
+        <img src="public/IMG-03.svg" alt="">
       </div>
       <div class="text col-md-7">
         <h5>Websites</h5>
@@ -175,7 +175,7 @@
         <button class="text-btn">Get Started</button>
       </div>
       <div class="img col-md-5">
-        <img src="/public/IMG-04.svg" alt="">
+        <img src="public/IMG-04.svg" alt="">
       </div>
     </div>
   </div>
@@ -196,8 +196,8 @@
           <p><b>Easily create a modern, professional website</b> — no technical skills required <br>— thanks to 100s of
             industry-specific templates.</p>
           <div class="raw">
-            <img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg"
-              alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt="">
+            <img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg"
+              alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt="">
           </div>
         </div>
 
@@ -209,41 +209,41 @@
   <div class="testimonial">
     <div class="raw">
       <div class="test col-md-4">
-        <img src="/public/frame-1.svg" alt="">
+        <img src="public/frame-1.svg" alt="">
         <h3>Katherine</h3>
         <h4> Hair & Makeup</h4>
         <p>Webcentral has enhanced my business by doing exactly what I want to do. It's given me a platform to be
           visible so I can carry on doing what I'm good at doing.</p>
         <div class="raw">
-          <img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg"
-            alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt="">
+          <img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg"
+            alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt="">
         </div>
-        <button class="btn"> <img src="/public/icon--play.svg" alt="">Watch</button>
+        <button class="btn"> <img src="public/icon--play.svg" alt="">Watch</button>
       </div>
       <div class="test col-md-4">
-        <img src="/public/frame-2.svg" alt="">
+        <img src="public/frame-2.svg" alt="">
         <h3>Monica</h3>
         <h4>Smile Dental</h4>
         <p>Webcentral has transformed my business by allowing it to grow a lot faster than I expected. Since partnering
           with Netregistry we're able to reach out to a lot more patients online and we now have more patients than
           ever.</p>
         <div class="raw">
-          <img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg"
-            alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt="">
+          <img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg"
+            alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt="">
         </div>
-        <button class="btn"> <img src="/public/icon--play.svg" alt="">Watch</button>
+        <button class="btn"> <img src="public/icon--play.svg" alt="">Watch</button>
       </div>
       <div class="test col-md-4">
-        <img src="/public/frame-3.svg" alt="">
+        <img src="public/frame-3.svg" alt="">
         <h3>Adrian</h3>
         <h4>Garden Care</h4>
         <p>Webcentral takes care of everything, I just say yes or no, which is good. I don’t like sitting in front of a
           computer, so I like the aspect of someone taking care of the online marketing side.</p>
         <div class="raw">
-          <img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg"
-            alt=""><img src="/public/star-1.svg" alt=""><img src="/public/star-1.svg" alt="">
+          <img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg"
+            alt=""><img src="public/star-1.svg" alt=""><img src="public/star-1.svg" alt="">
         </div>
-        <button class="btn"> <img src="/public/icon--play.svg" alt="">Watch</button>
+        <button class="btn"> <img src="public/icon--play.svg" alt="">Watch</button>
       </div>
     </div>
   </div>
@@ -254,7 +254,7 @@
       <div class="dom-banner">
         <h1>Find your perfect domain name now</h1>
         <form class="d-flex" role="search">
-          <img src="/public/icon--search-magnify.svg" alt="">
+          <img src="public/icon--search-magnify.svg" alt="">
           <input class="form-control me-2" type="search" placeholder="findyourdomain.com.au" aria-label="Search">
           <button class="dom-btn" type="submit" id="login-btn">Search</button>
         </form>
@@ -268,23 +268,23 @@
 
   <div class="payment raw">
     <div class="sub-pay">
-      <img src="/public/pay.svg" alt="">
+      <img src="public/pay.svg" alt="">
       <h3>Pay an invoice</h3>
       <p>Pay an invoice quickly and
         easily online.</p>
     </div>
     <div class="sub-pay">
-      <img src="/public/domain.svg" alt="">
+      <img src="public/domain.svg" alt="">
       <h3>Renew a domain name</h3>
       <p>Renew an existing domain name you already have with us.</p>
     </div>
     <div class="sub-pay">
-      <img src="/public/transfer.svg" alt="">
+      <img src="public/transfer.svg" alt="">
       <h3>Transfer to us</h3>
       <p>Transfer your existing domain name from your current provider to us.</p>
     </div>
     <div class="sub-pay">
-      <img src="/public/service.svg" alt="">
+      <img src="public/service.svg" alt="">
       <h3>Service status</h3>
       <p>The best value domain names with no hidden fees.</p>
     </div>
@@ -346,23 +346,23 @@
           </ul>
         </div>
         <div class="footer-heading">
-         <button> <img src="/public/account.svg" alt="">Log in</button>
+         <button> <img src="public/account.svg" alt="">Log in</button>
         </div>
       </div>
       <div class="sub-footer">
         <div class="footer-heading">
             <div class="footer-logo">
-              <img src="/public/sub-brandmark.svg" alt="">
+              <img src="public/sub-brandmark.svg" alt="">
             </div>
             <div class="social-media raw">
               <div class="facebook">
-                  <a href=""><img src="/public/facebook.svg" alt=""></a>
+                  <a href=""><img src="public/facebook.svg" alt=""></a>
               </div>
               <div class="twitter">
-                <a href=""><img src="/public/twitter.svg" alt=""></a>
+                <a href=""><img src="public/twitter.svg" alt=""></a>
               </div>
               <div class="youtube">
-                <a href=""><img src="/public/youtube.svg" alt=""></a>
+                <a href=""><img src="public/youtube.svg" alt=""></a>
               </div>
             </div>
         </div>
